# zstore

./: .env  .gitignore  .gitmodules  Makefile  README.md  build  flake.nix  meson.build  meson.ini  pcie.json  run.sh  testbed.md  zstore2.json  zstore4.json
.github/workflows/: c-cpp.yml
docs/: 4tb_broken.md  4tb_zns.md  NOTES.md  broken_zns.md  ceph.md  design.md  experiment_plan.md  minio.md  network.md  tasks.md  zns_device.md
docs/experiments/: agg_reads.md  benchmark.md  checkpoint.md  ckpt_read.md  ckpt_write.md  dec_4devices.md  dec_6devices.md  leader.md  microceph_cred.md  multipath.md  multipath3.md  multipath4.md  multipath5.md  parallel_write.md
examples/: boost_parallel.cc  boost_poll.cc  embedded_cpp.cpp  http_server_async.cpp  main.cc  measurement.cc  mp_one_drive_read.cc  simple_append.cc  test_append_read.cc  zoned.c  zstore.cc
examples/arbitration/: arbitration.cc  arbitration_rdma.cc  arbitration_read.cc  arbitration_write.cc
examples/boost/: http_server_async.cpp  http_server_awaitable.cc  http_server_awaitable2.cc  http_server_awaitable_test.cc  http_server_small.cpp
examples/multipath/: mp_one_drive_append.cc  mp_one_drive_append_read.cc  mp_one_drive_read.cc  three_target_reads.cc  three_target_writes.cc  two_targets_read.cc
examples/rdma/: circular_buffer_client.cc  circular_buffer_server.cc  rdma_client.cc  rdma_server.cc
examples/seastar/: tcp_httpd.cc
examples/zookeeper/: simple-client.cc  zkclient.cc  zkleader.cc  zklock.cc  zktest.cc
experiments/: benchmark.md  lat.md  lat_spdk.md  mp4_output.md  multipath2_clean.md  multipath6.md  multipath_clean.md  spdk_measure.md  spdk_measure2.md
old/: global.h  request_handler.h  request_handler.h.bak  xnvme_zns_device.h
old_include/: messages_and_functions.h  zns_device.h  zstore.h
scripts/: autorun_app_file  autorun_parse.sh  bench_read.sh  capture-zstore-perf-trace.bash  finish-zones.sh  install-rdma.sh  network_env.sh  new_bench.sh  random-reads.lua  roce-target.sh  run_gateway.sh  s3curl.sh  utils.sh
scripts-bak/: dpdk.sh
scripts-bak/bench_scripts/: bench_read.sh  bench_write.sh  read-write.lua  seq-writes.lua
scripts-bak/ceph/: bench_ceph_writes.sh  ceph-debug.lua  ceph-writes.lua  presign.py  presign_urls
scripts-bak/config/: README.md  ceph_small_s3bench
scripts-bak/deprecated/: bench.sh  bench_example.sh  debug.sh  format.sh  presign_urls  send_curl.sh  write_once.sh
scripts-bak/installation/: install-rocev2.sh
scripts-bak/run_scripts/: run_minio.sh
scripts-bak/s3_scripts/: minio-bucket-policy.sh
scripts-bak/setup_scripts/: setup-ceph.sh  setup-ssd.sh  setup-zookeeper.sh
scripts/bench_scripts/: bench_consistency.sh  bench_custom.sh  consistency_workload.lua  ibm_workload.lua  put_4kb_minio.lua
scripts/ceph/: bench_ceph_read.sh  ceph-reads.lua  setup-policy.py
scripts/config/: bdev.conf  ceph_small_wrk_write  zstore_large_wrk_read  zstore_medium_wrk_read  zstore_small_wrk_read
scripts/deprecated/: nvme-read.fio  presigned_post.py  rdma-target.sh
scripts/device_scripts/: finish-zones.sh  reformat_device.sh
scripts/run_scripts/: run_checkpoint.sh  run_hsbench.sh
scripts/s3_scripts/: bench_minio.sh  bucket-policy.json  policy.json  set-bucket-policy.py  start_minio.sh
src/: arbitration.cc  arbitration_append.cc  arbitration_rdma.cc  arbitration_rdma_append.cc  arbitration_rdma_read.cc  arbitration_read.cc  arbitration_write.cc  async_example.c  bak_common.cc  common.cc  device.cc  dump.cc  endpoint.cpp  gpt_nvme_test.cc  hello-world.cc  http_server.cc  kvstore.cc  magic_buffer.cpp  main.cc  mc_append.cc  measurement.cc  messages_and_functions.cc  multi_append.cc  multipath.cc  object.cc  old_object.cc  rdma_common.cc  rdma_utils.cc  remote-hello-world.cc  rw_test.cc  segment.cc  simple_append.cc  spdk_append.cc  tinyxml2.cpp  utils.hpp  z_append.cc  zns_bdev_test.cc  zns_nvme_test.cc  zone.cc  zoned.cc  (+2 more)
src/examples/: arbitration.cc  arbitration_append.cc  arbitration_rdma_read.cc  check_read.cc  mp_one_drive_append.cc  mp_one_drive_read.cc  nvmf.cc  spdk_append.cc  zns_nvme_test.cc
src/include/: backend.h  boost_utils.h  common.h  configuration.h  conn.hpp  device.h  endpoint.hpp  error.hpp  global.h  helper.h  http_server.h  http_server2.h  http_utils.h  item.h  kv_handler.h  magic_buffer.hpp  meson.build  messages_and_functions.h  object.h  old_zstore.h  rdma_common.h  rdma_utils.h  request_handler.h  segment.h  spdk_zns.h  startRouteRequestHandler.h  tinyxml2.h  types.h  utils.h  utils.hpp  webServer.h  zns_device.h  zns_device2.h  zns_utils.h  zns_utils2.h  zone.h  zstore.cc  zstore.h  zstore_controller.h
src/old/: dead_zns_device.h  main.cc  zns_device2.h  zstore.cc  zstore.h  zstore_controller.h
src/old_include/: request_handler.h  utils.hpp  zns_utils.h  zone.h  zstore_controller.h
src/s3/: aws_s3.cpp  aws_s3.h  todo.md
src/tests/: 4KB_object_test.cc  4MB_object_test.cc  device_test.cc  different_objects_test.cc  map_test.cc  map_unittest.cc  object_test.cc  simple_object_test.cc
src/utils/: finish_zones.cc
src/zr/: common.h  global.h  segment.h  spdk_zns.h  zns_device2.h
src/zstore/: backend.cc  http_server.cc  startRouteRequestHandler.cc  webServer.cc  zstore.cc
subprojects/: simpleznsdevice.wrap  spdk.wrap
subprojects/packagefiles/spdk/: configure-spdk.sh  meson.build
tools/: README.md  utils.bash
utils/: READMD.md  bench.sh  bench_ceph_read.sh  bench_ceph_writes.sh  bench_read.sh  bench_write.sh  build-nvme-host.sh  build-nvme-target.sh  build-zstore-gw.sh  capture-zstore-perf-trace.bash  ceph-create-bucket.py  ceph-reads.lua  ceph-writes.lua  clear.sh  create_namespace.sh  curl_get.sh  curl_post.sh  debug.sh  dpdk.sh  finish-zones.sh  fio_test.sh  format.sh  http_post.sh  install-ofed.sh  install-rdma.sh  multi_controller.sh  multi_path.sh  rdma-target.sh  rdma.sh  reformat_device.sh  roce-target.sh  rtcp-target.sh  run_checkpoint.sh  run_cleanup.sh  run_gateway.sh  run_hsbench.sh  s3-get.sh  seq-writes.lua  set-bucket-policy.py  setup-multipath.sh  (+11 more)
zr/: device.cc  device.h  kv_handler.h  zstore_controller.cc
(+13 files in other folders)
